crates/parser/tests/cases/snapshots/cases__errors__expr_call_eq_label.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(expr_call_eq_label), expressions::parse_expr,\n    \"foo(bar=1, baz = 2)\")"

---
error: Syntax error in argument list
  ┌─ expr_call_eq_label:1:8
  │
1 │ foo(bar=1, baz = 2)
  │        ^ unexpected `=`
  │
  = Argument labels should be followed by `:`.
  = Hint: try `bar:`
  = If this is a variable assignment, it must be a standalone statement.

error: Syntax error in argument list
  ┌─ expr_call_eq_label:1:16
  │
1 │ foo(bar=1, baz = 2)
  │                ^ unexpected `=`
  │
  = Argument labels should be followed by `:`.
  = Hint: try `baz:`
  = If this is a variable assignment, it must be a standalone statement.


